kubernetes/traefik-v2.4-deploy/traefik kubernetes gateway api/kubernetes-dashboard-gateway/kubernetes-httproute.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-httproute
  namespace: kube-system
  labels:
    app: traefik
spec:
  hostnames:
    - "kubernetes.mydlq.club"
  rules:
    - matches:
        - path:
            type: Prefix
            value: /
      forwardTo:
        - serviceName: kubernetes-dashboard
          port: 443
          weight: 1
